Fixed sizing on mobile devices

--- a/src/App.scss
+++ b/src/App.scss
@@ -26,3 +26,9 @@ html {
   transform: translate(-50%, -50%);
   width: 400px;
 }
+
+@media only screen and (max-width: 425px) {
+  .calc {
+    width: 95%;
+  }
+}
